Bug 162958 - Scrolling corruption when scrollbar is placed on the left
Summary: Scrolling corruption when scrollbar is placed on the left
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-31 21:16 UTC by Hoàng Đức Hiếu
Modified: 2008-06-02 21:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
steps in description, using python for printing (53.24 KB, image/png)
2008-05-31 21:17 UTC, Hoàng Đức Hiếu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hoàng Đức Hiếu 2008-05-31 21:16:23 UTC
Version:           svn rev 814912 (using Devel)
Installed from:    Compiled sources

When the scrollbar is put on the left side, and there are wrapping lines, scrolling creates residue in the right side position of the scrollbar.

Using Radeon HD 2600 AGP with radeonhd (git, newer than 1.2.1)
Debian unstable+experimental
systemsettings sets language to Vietnamese

Steps to create the attached screenshot:
* New shell, Ctrl-L to create space for scrolling
* 'resize' to get terminal width
* print a string that wrap twice
* scroll up 6 lines
* Result: the end of the help line and the test line are scrolled up

Scrolling by program output can also reproduce this bug.
Comment 1 Hoàng Đức Hiếu 2008-05-31 21:17:46 UTC
Created attachment 25028 [details]
steps in description, using python for printing
Comment 2 Robert Knight 2008-06-02 21:38:49 UTC
SVN commit 815891 by knight:


Fix scrolling corruption when scrollbar is placed on the left-side of the display.
Take into account the scrollbar position when computing the region of the 
display widget to do an optimised scroll on.

BUG: 162958



 M  +13 -4     TerminalDisplay.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=815891