Fix scrolling corruption when scrollbar is placed on the left-side of the display. Take into account the scrollbar position when computing the region of the display widget to do an optimised scroll on.

BUG: 162958


svn path=/trunk/KDE/kdebase/apps/konsole/; revision=815891